--- a/desafios/desafio012/conteudo/style.css
+++ b/desafios/desafio012/conteudo/style.css
@@ -59,6 +59,10 @@ section {
     font-size: 3.2vw;
 }
 
+section p{
+    padding-bottom: 1em;
+}
+
 section.normal{
     background-color:#fff;
     color: black;
@@ -67,12 +71,26 @@ section.normal{
 section.photo{
     background-color:rgba(0, 0, 0, 0.469);
     color: #fff;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.523); /*inset é sompra para DENTRO*/
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: right center;
+
+}
+
+section#img01{
+    background-image: url('imagens/background001.jpg');
+}
+
+section#img02{
+    background-image: url('imagens/background002.jpg');
 }
 
 section.photo p{
     display: inline-block; /*Para a caixa apenas se adaptar no conteudo*/
-    background-color: rgba(0, 0, 0, 0.279);
+    background-color: rgba(0, 0, 0, 0.374);
     padding: 5px;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.514);
 }
 
 footer{
